--- a/helloworld.html
+++ b/helloworld.html
@@ -1,5 +1,10 @@
 ﻿<!doctype html>
 <html>
+<style>
+body{
+ color:green;
+}
+</style>
 <body>
 <h1>hello world!!!!</h1><br />
 <h3>소전 짱 재밌당!!!!!!!</h3>
